--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="src/config/typeform.js"></script>
-  <script src="src/lib/searchTypeForm.js"></script>
-  <script src="src/components/App.jsx"></script>
-  <script src="src/components/VehicleList.jsx"></script>
-  <script src="src/components/VehicleListEntry.jsx"></script>
-  <script src="src/index.js"></script>
+  <script src="compiled/src/config/typeform.js"></script>
+  <script src="compiled/src/lib/searchTypeForm.js"></script>
+  <script src="compiled/src/components/App.js"></script>
+  <script src="compiled/src/components/VehicleList.js"></script>
+  <script src="compiled/src/components/VehicleListEntry.js"></script>
+  <script src="compiled/src/index.js"></script>
  
 </body>
 </html>
